2011-01-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_create_target): Use new SSH_LSC_CREDENTIAL element
	instead of old LSC_CREDENTIAL.

2011-01-18  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* doc/example.auth.conf: Updated with more sensible values and
	additional comments.

2011-01-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Install users directory.

2011-01-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* include/nvt_categories.h, misc/nvt_categories.h: Moved
	nvt_categories.h from include directory to misc directory
	as the include directory is going to be eliminated. Misc
	was the best match although in libraries it is only used
	in nasl.

	* misc/CMakeLists.txt: Install nvt_categories.h.

2011-01-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Added test for wmiclient library.

	* tools/libopenvas-config.in: Cleaned up variable substitution
	to work with cmake. Removed egd handling.

2011-01-17  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove standalone parts of builtin plugins, as they can be run
	standalone via the NASL wrappers.

	* nasl/nasl_builtin_openvas_tcp_scanner.c (read_sysctl_maxsysfd)
	(compute_min_max_cnx, usage, main): Remove.

	* nasl/nasl_builtin_synscan.c (scan): Set fallback port range for
	openvas-nasl.
	(plugin_run_synscan): Change time format string types to longs.
	(main): Remove.

2011-01-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Added test for wmiclient library.

	* tools/libopenvas-config.in: Cleaned up variable substitution
	to work with cmake. Removed egd handling.

2011-01-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Fixed sequence of lib build.

2011-01-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_authenticate, omp_create_task, omp_create_task_rc)
	(omp_create_config, omp_create_lsc_credential, omp_create_agent)