@@ -124,7 +124,7 @@ int omp_until_up (int (*)(gnutls_session_t *, entity_t *), gnutls_session_t *,
                   entity_t *);
 
 int omp_create_target (gnutls_session_t *, const char *, const char *,
-                       const char *, const char *, char **);
+                       const char *, const char *, const char *, char **);
 
 int omp_delete_target (gnutls_session_t *, const char *);
 
